// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<label>
  Label
  :
  <input
    data-testid="default-input"
    id="default"
    onChange={[Function]}
    value=""
  />
</label>
`;

exports[`Render properties.label 1`] = `
<label>
  Input Foo Label
  :
  <input
    data-testid="properties.label-input"
    id="properties.label"
    onChange={[Function]}
    value=""
  />
</label>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.label 1`] = `true`;

exports[`Test Schema properties.label 2`] = `null`;
